# rust_hands_on

./: .gitignore  Cargo.toml  README.md  test.txt
caching/simple_caching/: Cargo.toml
caching/simple_caching/src/: main.rs
cli_app/: Cargo.toml  README.md
cli_app/src/: lib.rs  main.rs
cli_app/tests/: cli.rs
cli_projects/: README.md
cli_projects/cli_app/: Cargo.toml  README.md
cli_projects/cli_app/src/: lib.rs
cli_projects/cli_app/tests/: cli.rs
cli_projects/recho/src/: main.rs
cli_projects/rls/: Cargo.toml
cli_projects/rls/src/: main.rs
cli_projects/todo/: Cargo.toml  todo.txt
cli_projects/todo/src/: lib.rs  main.rs
cli_projects/todo_2/: Cargo.toml
cli_projects/todo_2/src/: lib.rs  main.rs
custom_iterator/src/: main.rs
custom_vec/: Cargo.toml
custom_vec/src/: main.rs
db/db_insert/migrations/: 002_students.sql
db_insert/: .env  Cargo.toml
db_insert/src/: main.rs
drop_trait/src/: main.rs
ds/: README.md
ds/arrays_and_hashing/: Cargo.toml
elastic_with_rust/: Cargo.toml
elastic_with_rust/src/: main.rs
fct/: Cargo.toml
fct/src/: main.rs
interview_test/: Cargo.toml
interview_test/src/: main.rs
libp2p/: Cargo.toml
lifetime/src/: lib.rs
lock_hold/: Cargo.toml
lock_hold/src/: main.rs
macros/src/: main.rs
misc/progress_bar/: Cargo.toml
misc/serde/: Cargo.toml
misc/serde/src/: main.rs
networking/libp2p/src/: main.rs
networking/rustcat/src/: client.rs
networking/scrapper/: Cargo.toml
networking/scrapper/src/: main.rs
networking/tcp_protocol_impl/: Cargo.toml  run.sh
networking/tcp_protocol_impl/src/: main.rs
progress_bar/src/: main.rs
random1/: Cargo.toml
random1/src/: main.rs
rust_core/inter_mut/src/: main.rs
rust_core/lazy_static/: Cargo.toml
rust_core/lazy_static/src/: main.rs
rust_core/macros/src/: main.rs
rust_core/traits/custom_iterator/src/: main.rs
rustcat/: Cargo.toml
rustcat/src/: main.rs  server.rs
scylla_db/: Cargo.toml  Dockerfile  docker-compose.yaml
scylla_db/src/: actix_state.rs  db.rs  main.rs  state.rs  types.rs
scylla_db/src/routes/: mod.rs  store.rs
scylla_db_learning/temperature/: Cargo.toml
scylla_db_learning/temperature/src/: db.rs  main.rs  temperature_measurement.rs
simd/: Cargo.toml  README.md
simd/src/: main.rs
simd_json/: Cargo.toml
simd_json/src/: main.rs
xml_nested_enum/: Cargo.toml
xml_nested_enum/src/: main.rs
xml_response/: Cargo.toml
xml_response/src/: main.rs
