[workspace]

members = [
    "cli_projects/cli_app",
    "misc/progress_bar",
    "rust_core/traits/drop_trait",
    "rust_core/traits/custom_iterator",
    "networking/tcp_server_client",
    "networking/rustcat",
    "networking/libp2p",
    "cli_projects/recho",
    "cli_projects/rls",
    "cli_projects/todo",
    "cli_projects/todo_2",
    "rust_core/macros",
    "rust_core/pointer",
    "misc/custom_vec",
    "misc/serde",
    "rust_core/lazy_static",
    "rust_core/lifetime",
    "db/db_insert", 
    "rust_core/traits/custom_iterator",
    "rust_core/traits/gen_traits",
]
