[workspace]

members = [
    "cli_projects/cli_app",
    "misc/progress_bar",
    "rust_core/traits/drop_trait",
    "rust_core/traits/custom_iterator",
    "networking/tcp_server_client",
    "networking/rustcat",
    "networking/libp2p",
    "cli_projects/recho",
    "cli_projects/rls",
    "cli_projects/todo",
    "cli_projects/todo_2",
    "rust_core/macros",
    "rust_core/pointer",
    "misc/custom_vec",
    "misc/serde",
    "rust_core/lazy_static",
    "rust_core/lifetime",
    "db/db_insert", 
    "rust_core/traits/custom_iterator",
    "rust_core/traits/gen_traits",
    "ds/arrays_and_hashing",
    "algo/sorting",
    "networking/tcp_protocol_impl",
    "interview_test",
    "networking/web_server",
    "rust_core/inter_mut",
    "caching/simple_caching",
    "scylla_db",
    "scylla_db2",
]
