[package]
name = "elastic_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
elasticsearch = "7.17.7-alpha.1"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
uuid = {version = "1.8.0", features = ["v4","fast-rng","macro-diagnostics", ]}