[package]
name = "xml_nested_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.197",  features = ["derive"] }
