[package]
name = "cli_app"
version = "0.1.0"
edition = "2021"
authors = ["Siddharth Teli <telisiddharth123@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/siddharthteli12/rust_hands_on/tree/main/cli_app"
repository = "https://github.com/siddharthteli12/rust_hands_on/tree/main/cli_app"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"


[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"

